Relink clones to the new layer when flattening

When flattening a layer we can easily relink all the clones of the
source into the new layer.

BUG:476514